--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -8,4 +8,5 @@ jobs:
       - name: Set up Python for Demo
         uses: actions/setup-python@v4
       - name: Run tests
+        run2: pip3 install pytest 
         run: pytest TP1/test.py
