--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,6 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up Python for Demo
         uses: actions/setup-python@v4
+      - name: pip3 install pytest 
       - name: Run tests
-        run2: pip3 install pytest 
-        run: pytest TP1/test.py
+        run: pytest tp-r504/TP1/test.py
+             
