--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,7 +7,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up Python for Demo
         uses: actions/setup-python@v4
-      - name: pip3 install pytest 
+      - name: installer pyetest
+      - run: pip3 install pytest 
       - name: Run tests
-        run: pytest /TP1/test.py
+        run: pytest TP1/test.py
              
