--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -8,6 +8,6 @@ jobs:
       - name: Set up Python for Demo
         uses: actions/setup-python@v4
       - name: installer pyetest
-      - run: pip3 install pytest 
+        run: pip3 install pytest 
       - name: Run tests
         run: pytest TP1/test.py
