--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,5 +16,5 @@ jobs:
         run: pip3 install pytest 
       - name: Run tests
         run: pytest TP1/test.py
-      - run : echo "Nom branche: ${{ github.ref }}"
-      - run : echo "Nom repo: ${{ github.repository }}."
+      - run : echo "Nom branche:" ${{ github.ref }}
+      - run : echo "Nom repo:" ${{ github.repository }}.
