--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,3 +18,7 @@ jobs:
         run: pytest TP1/test.py
       - run : echo "Nom branche:" ${{ github.ref }}
       - run : echo "Nom repo:" ${{ github.repository }}.
+      − name : Set up Python f o r Demo
+        uses : actions/setup−python@v4
+        with :
+          python−version : $ { { matrix . python−version } }
