--- a/tp4/dockerfile1
+++ b/tp4/dockerfile1
@@ -7,18 +7,13 @@ RUN apt-get install -y build-essential
 RUN apt-get install -y python-dev 
 RUN apt-get install -y python3-pip 
 RUN apt-get install -y default-libmysqlclient-dev
-
 RUN pip3 install --upgrade pip
-
 RUN pip3 install flask-mysqldb mysql-connector-python
-
 RUN  mkdir -p /srv/templates
 
 COPY index.html /srv/templates/
-
 COPY app1.py /srv/
 
 WORKDIR /srv/
 
-
-CMD ["flask","-app","/srv/app1","run","--host=0.0.0.0"]
+CMD ["flask","--app","/srv/app1","run","--host=0.0.0.0"]
